--- a/Microbit.Console/App.config
+++ b/Microbit.Console/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <!--value = "user:pass@hostName:port/vhost"-->
+    <add key="microbit.rabbitmq" value="admin:admin@127.0.0.1/Main.VHost.DEV"/>
+  </appSettings>
 </configuration>
